--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,7 @@ li {
   display: flex;
   flex-direction: column;
   margin-top: 0;
+  max-width: 338px;
 }
 
 .projects__link {
